--- a/Mission06_Tait/appsettings.json
+++ b/Mission06_Tait/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyConnection": "Data Source = EnterMovies.sqlite"
+    "MyConnection": "Data Source = JoelHiltonMovieCollection.sqlite"
   }
 }
